<resources>
    <string name="app_name">Elbbbird</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="popular">Popular</string>
    <string name="recent">Recent</string>

    <string name="shots">Shots</string>
    <string name="teams">Teams</string>
    <string name="debuts">Debuts</string>
    <string name="playoffs">Playoffs</string>
    <string name="rebounds">Rebounds</string>

    <string name="about">About</string>
    <string name="feedback">Feedback</string>
</resources>
