<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/menu_navi_group_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navi_menu_shots"
            android:checked="true"
            android:icon="@drawable/ic_action_shots"
            android:title="@string/shots" />

        <item
            android:id="@+id/navi_menu_teams"
            android:icon="@drawable/ic_action_teams"
            android:title="@string/teams" />

        <item
            android:id="@+id/navi_menu_debuts"
            android:icon="@drawable/ic_action_debuts"
            android:title="@string/debuts" />

        <item
            android:id="@+id/navi_menu_playoffs"
            android:icon="@drawable/ic_action_playoffs"
            android:title="@string/playoffs" />

        <item
            android:id="@+id/navi_menu_rebounds"
            android:icon="@drawable/ic_action_rebounds"
            android:title="@string/rebounds" />

    </group>

    <group
        android:id="@+id/menu_navi_group_other"
        android:checkableBehavior="none">

        <item
            android:id="@+id/navi_menu_settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/navi_menu_feedback"
            android:title="@string/feedback" />

        <item
            android:id="@+id/navi_menu_about"
            android:title="@string/about" />
    </group>


</menu>